.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Personal_address__c.object
<CustomObject>
    <description>Records Employees&apos; personal address history</description>
    <fields>
        <fullName>xcdhcm__Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_sort__c</fullName>
        <description>Used in the code to sort the address values- jira 1175</description>
        <formula>IF(   ISPICKVAL( xcdhcm__Address_type__c ,&apos;Current home&apos; ) , 3, IF( ISNULL( xcdhcm__To_date__c ) , 2, 1)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_type__c</fullName>
        <description>Note - updated using workflows</description>
        <label>Address type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current home</fullName>
                </value>
                <value>
                    <fullName>Previous home</fullName>
                </value>
                <value>
                    <fullName>Expatriate</fullName>
                </value>
                <value>
                    <fullName>Second home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Check_for_Unique__c</fullName>
        <label>Check for unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>xcdhcm__City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Address_Type__c</fullName>
        <formula>IF(ISPICKVAL(xcdhcm__Address_type__c, &apos;Current home&apos;) , xcdhcm__Employee__r.Name&amp;Text(xcdhcm__Address_type__c)&amp;xcdhcm__Employee__r.xcdhcm__Work_email__c &amp;   xcdhcm__Employee__r.xcdhcm__Employee_Details__r.xcdhcm__User__r.Username, &apos;&apos;)</formula>
        <label>Unique address value update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Details__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Employee_Details__c</formula>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>xcdhcm__Personal__c</referenceTo>
        <relationshipLabel>Personal Addresses</relationshipLabel>
        <relationshipName>Personal_addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Employee_Details__r.xcdhcm__Leaving_Date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_name__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Employee_Details__r.Name</formula>
        <label>Employee name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__From_date__c</fullName>
        <label>From date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If(
  not(isblank( xcdhcm__Employee__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
   xcdhcm__Employee_leaving_date__c  &lt; xcdhcm__Employee__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
  xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postal_zipcode__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__State_province__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__To_date__c</fullName>
        <label>To date</label>
        <type>Date</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Address_type_mandatory</fullName>
        <active>true</active>
        <description>Throws error message when address type is not indicated on entering address</description>
        <errorConditionFormula>AND(NOT(ISBLANK( xcdhcm__Address_1__c )),ISBLANK(TEXT(xcdhcm__Address_type__c)))</errorConditionFormula>
        <errorMessage>Please indicate address type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Create_new_address_dont_edit_previous</fullName>
        <active>true</active>
        <errorConditionFormula>and(
   $Profile.Name  &lt;&gt; &quot;HRMS System Admin&quot;,
   $Profile.Name  &lt;&gt; &quot;HRMS Admin&quot;,
  $Profile.Name  &lt;&gt; &quot;System Administrator&quot;,
  not(isnew()),
  ISCHANGED( xcdhcm__Address_1__c ) 
)</errorConditionFormula>
        <errorMessage>If you wish to add a new home address please set up a new record.  To create a new home address you should first change the current home address to previous home address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__From_date_should_be_greate_than_To_date</fullName>
        <active>true</active>
        <description>From date should be greate than To date</description>
        <errorConditionFormula>xcdhcm__From_date__c    &gt;    xcdhcm__To_date__c</errorConditionFormula>
        <errorMessage>Please make sure that the From date is earlier than the To date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Previous_address_must_have_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>and(
 ispickval(xcdhcm__Address_type__c,&quot;Previous home&quot;),
 isnull(xcdhcm__To_date__c)
)</errorConditionFormula>
        <errorMessage>Previous Address must have an end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Stop_slash_comma_for_payroll_clients</fullName>
        <active>false</active>
        <description>This validation rule is to avoid slash, comma in following fields for payroll clients 
1) Address_1__c 
2) Address_2__c 
3) City__c 
4) Postal_zipcode__c 
5) State_province__c</description>
        <errorConditionFormula>IF( OR(xcdhcm__Employee__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__Net_payroll__c, xcdhcm__Employee__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__Parent_Company__r.xcdhcm__Net_payroll__c ), 
OR(CONTAINS(xcdhcm__Address_1__c, &apos;,&apos;),CONTAINS(xcdhcm__Address_1__c, &apos;/&apos;),CONTAINS(xcdhcm__Address_2__c, &apos;,&apos;),CONTAINS(xcdhcm__Address_2__c, &apos;/&apos;),CONTAINS(xcdhcm__City__c, &apos;,&apos;),CONTAINS(xcdhcm__City__c, &apos;/&apos;),CONTAINS(xcdhcm__Postal_zipcode__c, &apos;,&apos;),CONTAINS(xcdhcm__Postal_zipcode__c, &apos;/&apos;),CONTAINS(xcdhcm__State_province__c, &apos;,&apos;),CONTAINS(xcdhcm__State_province__c, &apos;/&apos;)), false)</errorConditionFormula>
        <errorMessage>Address should not contains comma(,) or slash(/)</errorMessage>
    </validationRules>
</CustomObject>